# bincollection_bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.env
bot/: __main__.py
bot/handlers/: menu.py  setup.py  start.py  user.py
bot/handlers/callback/: schedule.py  setup.py  user.py
bot/handlers/callbacks/: schedule.py  setup.py  user.py
core/: config.py  redis.py  schedule.py  scraper.py
core/controllers/: menu.py  start.py  user.py
core/controllers/callbacks/: schedule.py  user.py
core/keyboards/: menu.py
core/models/: user.py
core/states/: location.py
core/wrappers/: schedule.py  user.py
