[tool.poetry]
name = "bincollection-bot"
version = "0.1.0"
description = ""
authors = ["denver-code <csigorek@gmail.com>"]
readme = "README.md"
# packages = [{include = "bincollection_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
aiohttp = "^3.8.4"
aiosignal = "^1.3.1"
async-timeout = "^4.0.2"
attrs = "^23.1.0"
Babel = "^2.9.1"
certifi = "^2022.12.7"
charset-normalizer = "^3.1.0"
frozenlist = "^1.3.3"
idna = "^3.4"
magic-filter = "^1.0.9"
multidict = "^6.0.4"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
typing_extensions = "^4.5.0"
yarl = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
